--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 # praiseme
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/Djeya/praiseme/workflows/R-CMD-check/badge.svg)](https://github.com/Djeya/praiseme/actions)
 <!-- badges: end -->
 
 The goal of praiseme is to ...
